--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
-name: GetDesktop
+name: Minecraft_ScreenShare
 version: 1.5
 author: MPoint
-main: GetDesktop.GetDesktop
+main: net.mpoisv.ScreenShare
 
 api-version: 1.13
 
@@ -9,4 +9,4 @@ commands:
   GetDesktop:
     description: Image Set
     usage: '/<command>'
-    permission: 'GetDesktop.*'
+    permission: 'screen.share.*'
