--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,11 @@ local.properties
 # Spring Boot Tooling
 .sts4-cache/
 
+bin/
+
 ### Java ###
 # Compiled class file
-*.class
+#*.class
 
 # Log file
 *.log
