--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/마인크래프트/spigot-1.16.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/skyne/Downloads/jocl-2.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/github/Minecraft_ScreenShare/jocl-2.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/github/Minecraft_ScreenShare/spigot-1.16.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
